# vira

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  render.yaml  requirements.txt  run_backend.bat  start.sh  start_backend.bat  start_frontend.bat  start_system.bat  vercel.json
backend/: .dockerignore  .env  .env.example  .vira_state.json  Dockerfile  agents.py  config.py  database.py  llm.py  main.py  memory.py  pyproject.toml  rag.py  requirements.txt  run_server.py  voice.py
backend/__pycache__/: agents.cpython-314.pyc.1806975563312  agents.cpython-314.pyc.1870465465152  config.cpython-314.pyc.1957783234880  config.cpython-314.pyc.2064402264976  config.cpython-314.pyc.2426652484656  config.cpython-314.pyc.2845256345920  database.cpython-314.pyc.1264969912208  llm.cpython-314.pyc.1869103205424  llm.cpython-314.pyc.1957229629872  llm.cpython-314.pyc.2370709600688  llm.cpython-314.pyc.2719846974384  llm.cpython-314.pyc.2753407847856  main.cpython-314.pyc.1264969912208  main.cpython-314.pyc.1806968356912  main.cpython-314.pyc.1855884953424  main.cpython-314.pyc.1957204994352  main.cpython-314.pyc.2633064857136  main.cpython-314.pyc.2719836143664  memory.cpython-314.pyc.1294178142512  memory.cpython-314.pyc.1867228845024  memory.cpython-314.pyc.1956796863456  memory.cpython-314.pyc.2809019713840  rag.cpython-314.pyc.1293050630192  rag.cpython-314.pyc.1806979239984  rag.cpython-314.pyc.2845256490032  run_server.cpython-314.pyc.1264969912208  start_server.cpython-314.pyc.1264969912208  (+2 more)
(+156 files in other folders)
